[package]
name = "MPServer"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros", "net", "sync"] }
bevy_ecs = "0.16.1"
bevy_app = "0.16.1"
avian3d = "0.3.1"
bincode = { version = "2.0.1", features = ["serde"] }
bitstream-io = "4.1.0"
serde = { version = "1.0.219", features = ["derive"] }